--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -26,3 +26,23 @@ html, body {
 		height: 100px;
 	}
 }
+
+.info {
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+	.title {
+		h1 {
+			text-align: center;
+			font-size: 40px;
+		}
+	}
+	button {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 10px;
+	}
+}
