added unformatted rules

--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -46,3 +46,18 @@ html, body {
 		margin-top: 10px;
 	}
 }
+
+.rules {
+	.title {
+		h1 {
+			text-align: center;
+			font-size: 40px;
+		}
+	}
+	button {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 10px;
+	}
+}
