--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -28,6 +28,31 @@ html, body {
 	}
 }
 
+.game {
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+	.title {
+		h1 {
+			color: #e74c3c;
+			text-align: center;
+			font-size: 40px;
+		}
+	}
+	button {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 10px;
+	}
+	
+	.back {
+		margin-bottom: 20px;
+	}
+}
+
 .info {
 	position: relative;
 	top: 50%;
