--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -29,27 +29,48 @@ html, body {
 }
 
 .game {
-	position: relative;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
-	.title {
-		h1 {
-			color: #e74c3c;
-			text-align: center;
-			font-size: 40px;
-		}
-	}
-	button {
+	.card {
+		margin-top: 30px;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
+		width: 240px;
+		height: 349px; 
+		background: url(../images/card.png);
+		background-position: center;
+		background-size: cover;
+	}
+	.nextBtn {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 15px;
+	}
+
+	button {
 		margin-top: 10px;
 	}
+
+	.cardCount {
+		margin-top: 20px;
+		text-align: center;
+	}
 	
-	.back {
-		margin-bottom: 20px;
+	.btnWrap {
+		width: 155px;
+		display: block;
+		margin-right: auto;
+		margin-left: auto;
+		.rulesBtn {
+			margin-left: 13px;
+			width: 75px;
+		}
+
+		.back {
+			margin-left: 10px;
+			width: 75px;
+			// margin-bottom: 20px;
+		}
 	}
 }
 
