Added space saver card

--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -41,7 +41,7 @@ html, body {
 		margin-right: auto;
 		width: 240px;
 		height: 349px; 
-		background: url(../images/card.png);
+		background: url(../images/noCard.png);
 		background-position: center;
 		background-size: cover;
 	}
