--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -35,7 +35,8 @@ html, body {
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	.card {
-		// margin-top: 30px;
+		cursor: pointer;
+		cursor: hand;
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
